--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -80,3 +80,15 @@
     display: block
   }
 }
+
+// el submenu
+.el-submenu .el-menu-item{
+  height: 45px;
+  line-height: 45px;
+}
+
+// el submenu
+.el-menu-item, .el-submenu__title{
+  height: 45px;
+  line-height: 45px;
+}
